DDF-3460 Switch primitive wrappers to use valueOf instead of constructor